Agregando Operador Ternario

--- a/PracticaDOM/index.html
+++ b/PracticaDOM/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="tittle"> HOLA MUNDO </h1>
+<div id='root'>
+    <li>Producto 1</li>
+    <li>Producto 2</li>
+    <li>Producto 3</li>
+</div>
+<script src="./practicaDom3.js"></script>
 
-    <script src="./arrays.js"></script>
 </body>
 </html>
