--- a/Preentrega2/index.html
+++ b/Preentrega2/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div id="productos" class="card__productos row col-sm-8 col-lg-8"></div>
 
-        <div id="carrito " class="col-sm-4 col-lg-4">
+        <div id="carrito " class="contenedor__carrito col-sm-4 col-lg-4">
           <table id="cart" class="table table-striped table-hover">
             <thead>
               Productos Seleccionados
